Temporary fix for top navbar (works on mobile, slightly broken on desktop)

--- a/css/main.css
+++ b/css/main.css
@@ -67,8 +67,6 @@ div#collapsable-nav.navbar-collapse.collapse.in{
 }
 
 .nav-menu {
-    box-sizing: content-box;
-    position: relative;
     top: 0rem;
     left: 10rem;
     padding: 10px;
@@ -78,12 +76,15 @@ div#collapsable-nav.navbar-collapse.collapse.in{
     font-weight: 400;
     font-style: normal;
     font-size: 20px;
-    margin-left: 50px;
     color: rgb(90, 90, 90);
 
 }
 .navbar-default .navbar-nav > li > a:hover {/*wtf*/
     color: #c30000;
+}
+
+.navbar-static-top {
+	margin-bottom: 20px;
 }
 
 .nav > li > a { /*WTF*/
@@ -93,6 +94,8 @@ div#collapsable-nav.navbar-collapse.collapse.in{
     border-right: 1px solid #ddd;
     border-left: 1px solid #ddd;
 }
+
+
 .list-group {
     display: -webkit-box;
     display: -webkit-flex;
@@ -186,6 +189,7 @@ div#collapsable-nav.navbar-collapse.collapse.in{
 /* body is started */
 body {
     font-family: 'Lora', serif;
+	min-height: 2000px;
 }
 .gallery {
     margin-top:30px;
@@ -291,6 +295,10 @@ p {
     background: url("../sources/logo-lg.png") no-repeat;
     width: 400px;
     height: 132px;
+	margin-left: 155px;
+	margin-bottom: 55px;
+	padding-bottom: 25px;
+	border-bottom: 25px;
 
 }
 
